Solved images width and scrolling on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,6 @@
 
 html {
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 *:focus{
@@ -39,6 +38,7 @@ h3{
   width: 100%;
   min-height: 100vh;
   margin: auto;
+  overflow-x: hidden;
 }
 
 #header {
@@ -76,8 +76,10 @@ h3{
 }
 
 .matchup-img{
-  width: 50px;
+  width: 25%;
+  min-width: 25px;
   margin: 0 20px;
+
 }
 
 .game-div {
@@ -376,6 +378,11 @@ img {
   h2 {
     font-size: 1.5rem;
   }
+
+
+  .players-div {
+      margin: 0.25em auto;
+  }
 }
 
 @media screen and (max-width: 820px){
@@ -387,7 +394,4 @@ img {
     margin: 0 auto;
   }
 
-  .players-div{
-    margin: 0.25em auto;
-  }
 }
